      The \verb{\dontdiff} tag, like \verb{\donttest}, is \emph{not}
      shown on the rendered help page, so provides a clean alternative
      to \samp{## IGNORE_RDIFF_(BEGIN|END)} comments.

      \item \command{R CMD build} when there is no \file{NAMESPACE}, now
      uses the recommended \code{exportPattern("^[^.]")}, instead of
      exporting everything.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Headers \file{R_ext/Applic.h} and \file{R-ext/Linpack.h}
      used to include \file{R_ext/BLAS.h} although this was undocumented and
      unneeded by their documented entry points.  They no longer do so.

      \item New function \code{R_missing()}, factored out from
      \code{do_missing()}, used to fix \PR{18579}.

      \item \code{SEXP} type \code{S4SXP} has been renamed to \code{OBJSXP}
      to support experimenting with alternative object systems.  The
      \code{S4SXP} value can still be used in \code{C} code but is now
      deprecated.  Based on contributions from the R Consortium's
      Object-Oriented Programming Working Group.

      \item New function \code{pow1p(x,y)} for accurate \code{(1+x)^y}.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item \code{data()} no longer handles zipped data from
      long-defunct (since \R\sspace{}2.13.0) \option{--use-zip-data}
      installations.

      \item The legacy graphics devices \code{pictex()} and
      \code{xfig()} are now deprecated.  They do not support recent
      graphics enhancements and their font-handling is rudimentary. The
      intention is to retain them for historical interest as long as
      they remain somewhat functional.

      \item Support for \code{encoding = "MacRoman"} has been removed
      from the \code{pdf()} and \code{postscript()} devices -- this was
      a legacy encoding supporting classic macOS up to 2001 and no
      longer has universal \code{libiconv} support.
      %% e.g. not supported in musl
